fix objects on floor flickering

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -108,7 +108,7 @@ body {
 	padding-top: 1px;
 	left: 0;
 	bottom: 0;
-	border-top: 1px solid transparent;
+	border: 1.5px solid transparent;
 }
 
 @playerRotateX: 90deg;
